--- a/H1EmuLauncher/Windows/AboutPageWindow.xaml
+++ b/H1EmuLauncher/Windows/AboutPageWindow.xaml
@@ -104,13 +104,21 @@
                 <!-- Logo -->
                 <DockPanel Height="60"
                            HorizontalAlignment="Left"
-                           Margin="23,0,0,0">
+                           Margin="23,0,0,15">
 
                     <Image Source="..\Resources\H1EmuIcon.png"
                            Width="175"
                            Height="45"
-                           VerticalAlignment="Bottom"/>
+                           VerticalAlignment="Bottom">
 
+                        <Image.Effect>
+                            <DropShadowEffect BlurRadius="15"
+                                              Direction="-90"
+                                              RenderingBias="Quality"
+                                              ShadowDepth="0"
+                                              Opacity="0.4"/>
+                        </Image.Effect>
+                    </Image>
                 </DockPanel>
 
                 <!-- Exit button -->
@@ -119,12 +127,21 @@
                             RenderOptions.BitmapScalingMode="Fant"
                             Width="44"
                             Height="30"
-                            Margin="0,0,25,0"
+                            Margin="0,0,25,10"
                             VerticalAlignment="Center"
                             HorizontalAlignment="Right"
                             BorderThickness="0"
                             Click="CloseButton_Click"
-                            Style="{StaticResource CloseButtonStyle}"/>
+                            Style="{StaticResource CloseButtonStyle}">
+
+                        <Button.Effect>
+                            <DropShadowEffect BlurRadius="15"
+                                                      Direction="-90"
+                                                      RenderingBias="Quality"
+                                                      ShadowDepth="0"
+                                                      Opacity="0.2"/>
+                        </Button.Effect>
+                    </Button>
                 </DockPanel>
             </Grid>
 
