--- a/H1EmuLauncher/Windows/AddServerWindow.xaml
+++ b/H1EmuLauncher/Windows/AddServerWindow.xaml
@@ -145,8 +145,16 @@
                     <Image Source="..\Resources\H1EmuIcon.png"
                            Width="140"
                            Height="40"
-                           VerticalAlignment="Center"/>
+                           VerticalAlignment="Center">
 
+                        <Image.Effect>
+                            <DropShadowEffect BlurRadius="15"
+                                              Direction="-90"
+                                              RenderingBias="Quality"
+                                              ShadowDepth="0"
+                                              Opacity="0.4"/>
+                        </Image.Effect>
+                    </Image>
                 </DockPanel>
 
                 <!-- Exit button -->
@@ -160,7 +168,16 @@
                             VerticalAlignment="Center"
                             HorizontalAlignment="Right"
                             BorderThickness="0"
-                            Style="{StaticResource CloseButtonStyle}"/>
+                            Style="{StaticResource CloseButtonStyle}">
+
+                        <Button.Effect>
+                            <DropShadowEffect BlurRadius="15"
+                                                      Direction="-90"
+                                                      RenderingBias="Quality"
+                                                      ShadowDepth="0"
+                                                      Opacity="0.2"/>
+                        </Button.Effect>
+                    </Button>
                 </DockPanel>
             </Grid>
 
