--- a/H1EmuLauncher/Windows/ConfirmBoxWindow.xaml
+++ b/H1EmuLauncher/Windows/ConfirmBoxWindow.xaml
@@ -100,7 +100,7 @@
 
             <!-- Grid for logo and exit button -->
             <Grid MouseLeftButtonDown="ConfirmBoxMouseLeftButtonDown"
-              Background="Transparent">
+                  Background="Transparent">
 
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
@@ -109,45 +109,62 @@
 
                 <!-- Logo -->
                 <DockPanel Height="40"
-                       HorizontalAlignment="Left"
-                       Margin="14,2,0,0">
+                           HorizontalAlignment="Left"
+                           Margin="14,2,0,0">
 
                     <Image Source="..\Resources\H1EmuIcon.png"
-                       Width="104"
-                       Height="28"
-                       Margin="0,4,0,0"
-                       VerticalAlignment="Center"/>
+                           Width="104"
+                           Height="28"
+                           Margin="0,4,0,0"
+                           VerticalAlignment="Center">
 
+                        <Image.Effect>
+                            <DropShadowEffect BlurRadius="15"
+                                              Direction="-90"
+                                              RenderingBias="Quality"
+                                              ShadowDepth="0"
+                                              Opacity="0.4"/>
+                        </Image.Effect>
+                    </Image>
                 </DockPanel>
 
                 <!-- Exit button -->
                 <DockPanel Grid.Column="1">
                     <Button x:Name="CloseButton"
-                        Click="ExitButton"
-                        RenderOptions.BitmapScalingMode="Fant"
-                        Width="39"
-                        Height="25"
-                        Margin="0,5,15,7"
-                        VerticalAlignment="Bottom"
-                        HorizontalAlignment="Right"
-                        BorderThickness="0"
-                        Style="{StaticResource CloseButtonStyle}"/>
+                            Click="ExitButton"
+                            RenderOptions.BitmapScalingMode="Fant"
+                            Width="39"
+                            Height="25"
+                            Margin="0,5,15,7"
+                            VerticalAlignment="Bottom"
+                            HorizontalAlignment="Right"
+                            BorderThickness="0"
+                            Style="{StaticResource CloseButtonStyle}">
+
+                        <Button.Effect>
+                            <DropShadowEffect BlurRadius="15"
+                                              Direction="-90"
+                                              RenderingBias="Quality"
+                                              ShadowDepth="0"
+                                              Opacity="0.2"/>
+                        </Button.Effect>
+                    </Button>
                 </DockPanel>
             </Grid>
 
             <!-- Main content in darkened area -->
             <Border Grid.Row="1"
-                Background="#1C1B22"
-                Margin="15,5,15,15"
-                UseLayoutRounding="True"
-                CornerRadius="5">
+                    Background="#1C1B22"
+                    Margin="15,5,15,15"
+                    UseLayoutRounding="True"
+                    CornerRadius="5">
 
                 <!-- Drop shadow effect -->
                 <Border.Effect>
                     <DropShadowEffect BlurRadius="8"
-                                  Direction="-90"
-                                  RenderingBias="Quality"
-                                  ShadowDepth="1"/>
+                                      Direction="-90"
+                                      RenderingBias="Quality"
+                                      ShadowDepth="1"/>
 
                 </Border.Effect>
 
@@ -177,7 +194,6 @@
                                    FontWeight="Light"/>
 
                         <Grid Grid.Row="1">
-
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*"/>
                                 <ColumnDefinition Width="*"/>
