--- a/H1EmuLauncher/Windows/MessageBoxWindow.xaml
+++ b/H1EmuLauncher/Windows/MessageBoxWindow.xaml
@@ -113,8 +113,16 @@
                        Width="104"
                        Height="28"
                        Margin="0,4,0,0"
-                       VerticalAlignment="Center"/>
+                       VerticalAlignment="Center">
 
+                        <Image.Effect>
+                            <DropShadowEffect BlurRadius="15"
+                                              Direction="-90"
+                                              RenderingBias="Quality"
+                                              ShadowDepth="0"
+                                              Opacity="0.4"/>
+                        </Image.Effect>
+                    </Image>
                 </DockPanel>
 
                 <!-- Exit button -->
@@ -128,7 +136,16 @@
                         VerticalAlignment="Bottom"
                         HorizontalAlignment="Right"
                         BorderThickness="0"
-                        Style="{StaticResource CloseButtonStyle}"/>
+                        Style="{StaticResource CloseButtonStyle}">
+
+                        <Button.Effect>
+                            <DropShadowEffect BlurRadius="15"
+                                                      Direction="-90"
+                                                      RenderingBias="Quality"
+                                                      ShadowDepth="0"
+                                                      Opacity="0.2"/>
+                        </Button.Effect>
+                    </Button>
                 </DockPanel>
             </Grid>
 
