--- a/H1EmuLauncher/Windows/SettingsWindow.xaml
+++ b/H1EmuLauncher/Windows/SettingsWindow.xaml
@@ -133,25 +133,30 @@
             <!-- Grid for logo and exit button -->
             <Grid MouseLeftButtonDown="MoveWindow"
                   Background="Transparent">
-                
+
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="90"/>
-                </Grid.RowDefinitions>
 
                 <!-- Logo -->
                 <DockPanel Height="60"
-                           Margin="23,0,0,0"
+                           Margin="23,5,0,15"
                            HorizontalAlignment="Left">
-                    
+
                     <Image Source="..\Resources\H1EmuIcon.png"
                            Width="175"
                            Height="45"
-                           VerticalAlignment="Bottom"/>
+                           VerticalAlignment="Bottom">
+
+                        <Image.Effect>
+                            <DropShadowEffect BlurRadius="15"
+                                              Direction="-90"
+                                              RenderingBias="Quality"
+                                              ShadowDepth="0"
+                                              Opacity="0.4"/>
+                        </Image.Effect>
+                    </Image>
                 </DockPanel>
 
                 <!-- Exit button -->
@@ -161,11 +166,20 @@
                             RenderOptions.BitmapScalingMode="Fant"
                             Width="44"
                             Height="30"
-                            Margin="0,2,25,0"
+                            Margin="0,0,25,2"
                             VerticalAlignment="Center"
                             HorizontalAlignment="Right"
                             BorderThickness="0"
-                            Style="{StaticResource CloseButtonStyle}"/>
+                            Style="{StaticResource CloseButtonStyle}">
+
+                        <Button.Effect>
+                            <DropShadowEffect BlurRadius="15"
+                                                      Direction="-90"
+                                                      RenderingBias="Quality"
+                                                      ShadowDepth="0"
+                                                      Opacity="0.2"/>
+                        </Button.Effect>
+                    </Button>
                 </DockPanel>
             </Grid>
 
